--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
     "rules": {
         "@typescript-eslint/naming-convention": "warn",
         "@typescript-eslint/no-empty-function": "warn",
+        "@typescript-eslint/no-unused-vars": ["warn", {
+            "argsIgnorePattern": "_.*"
+        }],
         "@typescript-eslint/semi": "error",
         "curly": "warn",
         "eqeqeq": "error",
