--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
         "@types/mocha": "^9.0.0",
         "@types/node": "14.x",
         "@types/shelljs": "^0.8.11",
+        "@types/tar": "^6.1.1",
+        "@types/tmp": "^0.2.3",
         "@types/vscode": "^1.63.0",
         "@typescript-eslint/eslint-plugin": "^5.9.1",
         "@typescript-eslint/parser": "^5.9.1",
@@ -101,6 +103,8 @@
     "dependencies": {
         "download": "^8.0.0",
         "mkdirp": "^1.0.4",
-        "shelljs": "^0.8.5"
+        "shelljs": "^0.8.5",
+        "tar": "^6.1.11",
+        "tmp": "^0.2.1"
     }
 }
