--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,10 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/naming-convention": "warn",
+        "@typescript-eslint/naming-convention": ["warn", {
+            "selector": "enumMember",
+            "format": ["PascalCase"]
+        }],
         "@typescript-eslint/no-empty-function": "warn",
         "@typescript-eslint/no-unused-vars": ["warn", {
             "argsIgnorePattern": "_.*"
