--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
                         },
                         "required": [
                             "name",
-                            "path"
+                            "storagePath"
                         ]
                     }
                 },
