Upgrade to Bindle 0.8.0

--- a/package.json
+++ b/package.json
@@ -64,6 +64,10 @@
                     "type": "integer",
                     "default": 8080
                 },
+                "autobindle.skipVersionCheck": {
+                    "type": "boolean",
+                    "default": false
+                },
                 "autobindle.environments": {
                     "scope": "machine",
                     "type": "array",
